--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "auth0-js": "^9.13.1",
     "axios": "^0.19.2",
+    "bulma": "^0.8.1",
+    "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
