--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bulma": "^0.8.1",
     "history": "^4.10.1",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
