--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "cloudinary-react": "^1.5.0",
     "history": "^4.10.1",
     "moment": "^2.24.0",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
